--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-HF9MQ4STXD"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-43BYBWXZD5"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-HF9MQ4STXD');
+  gtag('config', 'G-43BYBWXZD5');
 </script><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1800040129158075"
      crossorigin="anonymous"></script><!-- 
 
