--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@ PureLander : The best affordable landing page generator
 <p>ADVERTISING DISCLOSURE: This website and the products &amp; services referred to on the site are advertising marketplaces. This website is an advertisement and not a news publication. Any photographs of persons used on this site are models. The owner of this site and of the products and services referred to on this site only provides a service where consumers can obtain and compare.</p>
 <ul class="list">
 <li class="list__item">&copy; 2020 All Rights Reserved</li>
-<li class="list__item"><a href="https://checkout.wompi.co/l/puzX3E">Privacy Policy</a></li>
-<li class="list__item"><a href="https://checkout.wompi.co/l/puzX3E">Terms &amp; Conditions</a></li>
+<li class="list__item"><a href="https://privatepolicy.homeservice.zone">Privacy Policy</a></li>
+<li class="list__item"><a href="https://privatepolicy.homeservice.zone">Terms &amp; Conditions</a></li>
 <li class="list__item"><a href="https://amzn.to/3OfgW57">Contact Us</a></li>
 </ul>
 </div>
